Issued minor fix margin top is required on mobile devices for heart animation

--- a/scss/animation/_heart.scss
+++ b/scss/animation/_heart.scss
@@ -14,18 +14,27 @@
   background-position: 0 0;
   cursor: pointer;
   animation: animate-heart 1s steps(28);
+  &:hover {
+    background-position: -2800px 0;
+    transition: background 1.5s steps(28);
+  }
+}
 
- 
-}
-.heart:hover {
-  background-position: -2800px 0;
-  transition: background 1.5s steps(28);
-}
+
 @keyframes animate-heart {
   0% {
     background-position: 0 0;
   }
   100% {
     background-position: -2800px 0;
+  }
+}
+
+
+
+// Smartphones, Tablets & Small Laptops
+@include mediaSm {
+  .heart  {
+    margin-top: 1rem;
   }
 }
